# GIRASSOLTOPARQUET

./: .gitignore  ALLtoParquet.spec  ConversorParquetOffline.spec  README.md  STATUS_COMERCIALIZACAO.md  build.ps1  build_windows.ps1  pyproject.toml  requirements.txt  version_info.txt
app/: GIRASSOLtoPARQUET.spec  main.py  version_info.txt
app/core/: converter.py  csv_reader.py  detector.py  excel_reader.py  json_reader.py  ndjson_reader.py  normalizer.py  parquet_writer.py  schema.py  validator.py
app/core/licensing/: hardware_id.py  public_key.pem  validator.py
app/services/: config_service.py  job_queue.py  log_service.py  report_service.py
app/ui/: activation_dialog.py  drag_drop_area.py  help_dialog.py  main_window.py  progress_panel.py  settings_panel.py
cloudflare-worker/: README.md  test_cross_compat.py  wrangler.toml
cloudflare-worker/src/: index.ts  license.ts
licensing_service/: .env.example  Dockerfile  README.md  main.py  requirements.txt
licensing_service/tests/: test_webhook.py
samples/: exemplo.csv  exemplo.json  exemplo.jsonl  exemplo.ndjson  exemplo.xlsx
scripts/: gerar_chaves_mestre.py  gerar_licenca.py  licensing_core.py
tests/: test_csv.py  test_excel.py  test_json.py  test_jsonl.py  test_licensing.py  test_ndjson.py  test_normalizer.py  test_parquet.py  test_presets.py
