[project]
name = "parquet-converter"
version = "1.0.0"
description = "Conversor Parquet Offline"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "openpyxl>=3.1.0",
    "python-calamine>=0.1.7",
    "fastexcel>=0.7.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
